Version 3.21 (?? April 2012)
  * Fixed bug in auto.arima() when lambda is non-zero and stepwise is FALSE.

Version 3.20 (2 April 2012)
  * Fixed bugs in forecast.lm().
  * Improved handling of newdata in forecast.lm() to provide more meaningful error messages.
  * Fixed bug in dm.test() that occurred when errors were very small.

Version 3.19 (22 February 2012)
  * Improved plotting of forecast objects from lm models
  * Added MASE for lm forecasts using insample mean forecasts for scaling.
  * Modified definition of MASE for seasonal time series to use seasonal naive insample scaling.
  * Modified meanf() to allow it to be used with cross-sectional data.
  * Updated accuracy() to allow it to be used with cross-sectional data, lm forecasts and lm objects.
 
Version 3.18 (17 February 2012)
  * Added method for plotting non-time-series forecasts to plot.forecast().
  * Removed partial arg matching.
  * Cleaned up some code, removing commented out sections, etc.
  * Added robust option to stlf().
  * Added naive and rwdrift options to stlf() and forecast.stl().
  * Improved handling of msts objects in BoxCox.lambda()
  * Fixed some minor bugs in tbats() and bats()
  * Improved speed of bats() and tbats().
  
Version 3.17 (2 February 2012)
  * Improved forecast.lm() so it is more likely to find the original data from an lm object.
  * Parallel processing now available in auto.arima() when stepwise=FALSE
  * Default model selection in auto.arima() changed to AICc rather than AIC. This may affect model selection for very short time series.
  * max orders in auto.arima() now restricted to be less than 1/3 of length of data.

Version 3.16 (24 December 2011)
  * Corrected problem with AIC computation in bats and tbats
  * Fixed handlng of non-seasonal data in bats()
  * Changed dependency to >= R 2.14.0 in order to ensure parallel package available.

Version 3.15 (22 December 2011)
  * New functions tbats() and forecast.tbats() for multiple seasonal time series modelling.