@@ -1,5 +1,8 @@
 Version 3.21 (?? April 2012)
   * Fixed bug in auto.arima() when lambda is non-zero and stepwise is FALSE.
+  * Fixed bug in ets() when seasonal period is less than 1.
+  * Added plotting methods for bats and tbats objects.
+  * Changed default forecast horizons for bats and tbats objects.
 
 Version 3.20 (2 April 2012)
   * Fixed bugs in forecast.lm().
